Extend REST API with related articles and search (#7)
* implement returning related articles

* update README.md

* update CHANGELOG.md

* add view count in return value

* add test files

* update CHANGELOG.md

* add locustfile.py

* change dir structure

* add locust

* rename

* refactor

* add view count when visit an article

* add search feature

* update

* add .gitignore

* rename

* rename

* rename table

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
   - export PYTHONPATH=${PYTHONPATH}:/home/travis/build/Went-Yang/emis-backend
 
 script:
-  - python tests/test_hello_world.py
+  - python tests/unittest/test_knowledge_service.py
